--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "istanbul": "^0.4.5",
-    "mocha": "^5.0.5"
+    "mocha": "^5.0.5",
+    "rewire": "^4.0.0"
   }
 }
